Bloc for loading categories, added files, remove some files

--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -1,3 +1,4 @@
 {
-    "title": "Кофейня"
+    "title": "Кофейня",
+    "error_in_Loading_categories": "Что-то пошло не так, повторите попытку позже"
 }
