--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -2,5 +2,7 @@
     "title": "Кофейня",
     "error_in_Loading_categories": "Что-то пошло не так, повторите попытку позже",
     "your_order": "Ваш заказ",
-    "make_order": "Оформить заказ"
+    "make_order": "Оформить заказ",
+    "order_success": "Заказ создан",
+    "error_in_order": "Возникла ошибка при заказе"
 }
