--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -4,5 +4,11 @@
     "your_order": "Ваш заказ",
     "make_order": "Оформить заказ",
     "order_success": "Заказ создан",
-    "error_in_order": "Возникла ошибка при заказе"
+    "error_in_order": "Возникла ошибка при заказе",
+    "cancel_button": "Отменить",
+    "apply_button": "Разрешить",
+    "location_permission_text": "Разрешите доступ к геолокации",
+    "our_locations": "Наши кофейни",
+    "choose": "Выбрать",
+    "no_access_location": "Нет доступа к местоположению пользователя"
 }
