Added error text for current_location_button
Moved fields in blocs to the begining

--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -10,5 +10,6 @@
     "location_permission_text": "Разрешите доступ к геолокации",
     "our_locations": "Наши кофейни",
     "choose": "Выбрать",
-    "no_access_location": "Нет доступа к местоположению пользователя"
+    "no_access_location": "Нет доступа к местоположению пользователя",
+    "error_in_loading_locations": "Не удалось загрузить локации кофейнь"
 }
