--- a/lib/src/localization/app_ru.arb
+++ b/lib/src/localization/app_ru.arb
@@ -1,6 +1,6 @@
 {
     "title": "Кофейня",
-    "error_in_Loading_categories": "Что-то пошло не так, повторите попытку позже",
+    "error_in_Loading_categories": "Что-то пошло не так, проверьте подключение к интернету и попробуйте снова",
     "your_order": "Ваш заказ",
     "make_order": "Оформить заказ",
     "order_success": "Заказ создан",
